Applied Spacing to Icons & Fixed text overlapping icons

--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -315,5 +315,17 @@ body.dark .home .text{
 }
 
 .dark-mode-icon {
-    background-color: #F6F5FF;
+    filter: sepia(1) hue-rotate(150deg);
+    background-color: #ABB0C8;
+}
+
+.spaced-out {
+    margin: 15px 0;
+}
+
+.menu-bar .action-name {
+    font-size: 16px;
+    margin-top: -2px;
+    margin-left: 25%;
+    display: block;
 }
